# hsh

./: README.md  hsh.cabal
app/: Main.hs
