cabal-version:      2.4
name:               hsh
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Haskell SHell is a small implementation of a shell in haskell. 

-- A longer description of the package.
description: A UNIX-Shell offering some built in commands and allowing to execute programs.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: MIT
author:             Leon Vatthauer
maintainer:         leon.vatthauer@fau.de

-- A copyright notice.
-- copyright:
category: shell

executable hsh
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options:      -threaded
    build-depends:    base ^>=4.16.4.0, directory, process, unix
    hs-source-dirs:   app
    default-language: Haskell2010
